prepared some paths in CMakeLists for new mantaflow directory

--- a/source/blender/gpu/CMakeLists.txt
+++ b/source/blender/gpu/CMakeLists.txt
@@ -39,6 +39,7 @@ set(INC
 	../../../intern/glew-mx
 	../../../intern/guardedalloc
 	../../../intern/smoke/extern
+	../../../intern/mantaflow/extern
 )
 
 set(INC_SYS
