configured CMake and includes to use new manta api

--- a/intern/smoke/CMakeLists.txt
+++ b/intern/smoke/CMakeLists.txt
@@ -110,5 +110,5 @@ if(WITH_FFTW3)
 	)
 endif()
 
-blender_add_lib(bf_intern_smoke "${SRC}" "${INC}" "${INC_SYS}")
+#blender_add_lib(bf_intern_smoke "${SRC}" "${INC}" "${INC_SYS}")
 
