fixed include for manta python api header

--- a/source/blender/python/intern/CMakeLists.txt
+++ b/source/blender/python/intern/CMakeLists.txt
@@ -38,6 +38,7 @@ set(INC
 	../../../../intern/cycles/blender
 	../../../../intern/opencolorio
 	../../../../intern/guardedalloc
+	../../../../intern/mantaflow/extern
 )
 
 set(INC_SYS
